	20100426 (Till Straumann):

	* BLDApp/src/BLDMCast.dbd: Removed DELAY_FROM_FIDUCIAL variable.
	This is now controllable via an EPICS record (and obsolete anyways
	if FCOM blob sets are working).

	20100426 (Till Straumann):

	* BLDApp/src/BLDMCast.c: 
	 o Use new algorithm to create CA connections. Due to slow reconnection
	   we now just try and try until we succeed.
	 o Added statistics counters/timers for measuring min and max
	   delay (from fiducial) when fcomGetBlobSet() returns.
	 o Moved initialization of bldIoscan and bldMutex to driver init
	   function so that they are available even if the BLD task is not
	   running yet.
	 o Removed rate limitation if USE_PULSE_CA is undefined. We want
	   to work on all pulses where beam is announced (mod5 has BEAMFULL
	   set).
	 o FIXED: good return value of devBusMappedRegister() is non-NULL.

	20100422 (Till Straumann):
 	
	* BLDApp/src/BLDMCast.c: Use new FCOM blob sets to obtain data
	w/o the need to read after a timer delay. Reading a 'set' returns
	as soon as all data are available.

	20100420 (Till Straumann):

	* BLDApp/src/BLDMCast.h: changed __ld_le64() so that it no longer
	modifies data in place but uses a scratch area. A 'load' operation
	should not have side-effects!

	20100415 (Till Straumann):

	* BLDApp/Db/BLDMCast.db: Added records for reading statistics and
	setting the FCOM sampling delay.

	20100413 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.dbd: removed
	DELAY_FROM_FIDUCIAL; this parameter is now controlled via a record.
	
	20100413 (Till Straumann):

	* BLDApp/src/devBLDMcastWfRecv.c, BLDApp/src/devBLDMcastWfRecv.dbd,
	BLDApp/src/bldrx_evr.dbd, BLDApp/Db/BLDMCastWfRecv.db:
	Added waveform device support that reads BLD packets into a waveform.

	20100413 (Till Straumann):

	* BLDApp/src/BLDMCast.c: register statistics counters and
	timer delay with devBusMapped so that they can be read/written
	using EPICS records.

	20100413 (Till Straumann):
